work/hype/site/css/layouts/splash-page.css
#body {
}

#main {
  background-color: #FFF;
  padding-bottom: 0;
}

#main .splash {
  width: 100%;
  height: 100vh;
  background-image: url(../../imgs/splash-bottom.png);
  background-repeat: no-repeat;
  background-position: bottom;
  background-size: 100% auto;
  /*min-height: 365px;*/
  min-height: 400px;
  /*max-height: 90vh;*/
}

#main .splash-top {
  background-image: url(../../imgs/splash-vertical-top.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100%;
  height: 60%;
  min-height: 257px;
}

.menu-link {
    background-image: url(../../imgs/menu-icon.png);
}

@media (min-width: 48em) {
  #main .splash {
    min-width: 538px;  /* 768px - 230px from nav */
  }
  #main .splash-top {
    background-image: url(../../imgs/splash-big-top.png);
    min-width: 538px;
    min-height: 257px;
  }
}

